--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.prashant.adesara.socket.client"
+    package="com.nek.airmouse"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme"
         android:uiOptions="splitActionBarWhenNarrow" >
         <activity
-            android:name="com.prashant.adesara.socket.client.MyActivity"
+            android:name="com.nek.airmouse.socket.client.MyActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
